--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -21057,15 +21057,15 @@ video {
 }
 
 .stroke-0 {
-  strokeWidth: 0;
+  stroke-width: 0;
 }
 
 .stroke-1 {
-  strokeWidth: 1;
+  stroke-width: 1;
 }
 
 .stroke-2 {
-  strokeWidth: 2;
+  stroke-width: 2;
 }
 
 .object-contain {
@@ -50303,15 +50303,15 @@ video {
   }
 
   .sm\:stroke-0 {
-    strokeWidth: 0;
+    stroke-width: 0;
   }
 
   .sm\:stroke-1 {
-    strokeWidth: 1;
+    stroke-width: 1;
   }
 
   .sm\:stroke-2 {
-    strokeWidth: 2;
+    stroke-width: 2;
   }
 
   .sm\:object-contain {
@@ -79537,15 +79537,15 @@ video {
   }
 
   .md\:stroke-0 {
-    strokeWidth: 0;
+    stroke-width: 0;
   }
 
   .md\:stroke-1 {
-    strokeWidth: 1;
+    stroke-width: 1;
   }
 
   .md\:stroke-2 {
-    strokeWidth: 2;
+    stroke-width: 2;
   }
 
   .md\:object-contain {
@@ -108771,15 +108771,15 @@ video {
   }
 
   .lg\:stroke-0 {
-    strokeWidth: 0;
+    stroke-width: 0;
   }
 
   .lg\:stroke-1 {
-    strokeWidth: 1;
+    stroke-width: 1;
   }
 
   .lg\:stroke-2 {
-    strokeWidth: 2;
+    stroke-width: 2;
   }
 
   .lg\:object-contain {
@@ -138005,15 +138005,15 @@ video {
   }
 
   .xl\:stroke-0 {
-    strokeWidth: 0;
+    stroke-width: 0;
   }
 
   .xl\:stroke-1 {
-    strokeWidth: 1;
+    stroke-width: 1;
   }
 
   .xl\:stroke-2 {
-    strokeWidth: 2;
+    stroke-width: 2;
   }
 
   .xl\:object-contain {
@@ -167239,15 +167239,15 @@ video {
   }
 
   .\32xl\:stroke-0 {
-    strokeWidth: 0;
+    stroke-width: 0;
   }
 
   .\32xl\:stroke-1 {
-    strokeWidth: 1;
+    stroke-width: 1;
   }
 
   .\32xl\:stroke-2 {
-    strokeWidth: 2;
+    stroke-width: 2;
   }
 
   .\32xl\:object-contain {
